--- a/Gooze/Info.plist
+++ b/Gooze/Info.plist
@@ -62,5 +62,9 @@
 	<string>Pick a photo from your library as your profile image</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Take a photo for your profile image</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Gooze quiere usar tu ubicación para ubicarte en el mapa</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Gooze quiere usar tu ubicación para ubicarte en el mapa</string>
 </dict>
 </plist>
