--- a/Gooze/Release.plist
+++ b/Gooze/Release.plist
@@ -5,7 +5,7 @@
 	<key>AppTitle</key>
 	<string>Gooze</string>
 	<key>GoozeApiUrl</key>
-	<string>http://localhost:3000/api</string>
+	<string>http://727adae6.ngrok.io/api</string>
 	<key>LogLevel</key>
 	<string>error</string>
 	<key>LogAppID</key>
