--- a/Gooze/Debug.plist
+++ b/Gooze/Debug.plist
@@ -5,7 +5,7 @@
 	<key>AppTitle</key>
 	<string>Gooze</string>
 	<key>GoozeApiUrl</key>
-	<string>http://911e4f9a.ngrok.io/api</string>
+	<string>http://23139309.ngrok.io/development/api</string>
 	<key>LogLevel</key>
 	<string>debug</string>
 	<key>LogAppID</key>
