Initial implementation of payments, fixed alerts and safe insents on iPhoneX, fixed issue where search user balloons was not being updated after contact a user

--- a/Gooze/Debug.plist
+++ b/Gooze/Debug.plist
@@ -14,7 +14,9 @@
 	<string>ypzfjdx2bffbxSqjoxebh3qmoiznmohu</string>
 	<key>LogAppKey</key>
 	<string>vskgnz6i2hmIdQ04Q0mjmelZz7bf7txR</string>
-    <key>SocketPath</key>
-    <string>/development/socket.io</string>
+	<key>SocketPath</key>
+	<string>/development/socket.io</string>
+	<key>ConektaPublicKey</key>
+	<string>key_Nq2RPcj7tWasHq2iJz7ysqQ</string>
 </dict>
 </plist>
