Made navigation buttons(close, next, back) 1px wider. Added terms & conditions view. Added navigation close button on profile view. Made user balloons bigger on search view.

--- a/Gooze/Debug.plist
+++ b/Gooze/Debug.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>AppTitle</key>
 	<string>Gooze</string>
+	<key>GoozeUrl</key>
+	<string>http://61e4aae2.ngrok.io/development/</string>
 	<key>GoozeApiUrl</key>
 	<string>http://23139309.ngrok.io/development/api</string>
 	<key>LogLevel</key>
