--- a/Gooze/Staging.plist
+++ b/Gooze/Staging.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>AppTitle</key>
 	<string>Gooze</string>
+    <key>GoozeUrl</key>
+    <string>http://216.250.114.156/staging/</string>
 	<key>GoozeApiUrl</key>
 	<string>http://216.250.114.156/staging/api</string>
 	<key>LogLevel</key>
