--- a/Gooze/Staging.plist
+++ b/Gooze/Staging.plist
@@ -4,12 +4,12 @@
 <dict>
 	<key>AppTitle</key>
 	<string>Gooze</string>
-    <key>GoozeUrl</key>
-    <string>http://216.250.114.156/staging/</string>
+	<key>GoozeUrl</key>
+	<string>http://216.250.114.156/staging/</string>
 	<key>GoozeApiUrl</key>
 	<string>http://216.250.114.156/staging/api</string>
 	<key>LogLevel</key>
-	<string>error</string>
+	<string>debug</string>
 	<key>LogAppID</key>
 	<string>v6g2XV</string>
 	<key>LogAppSecret</key>
@@ -18,7 +18,7 @@
 	<string>vskgnz6i2hmIdQ04Q0mjmelZz7bf7txR</string>
 	<key>SocketPath</key>
 	<string>/staging/socket.io</string>
-    <key>ConektaPublicKey</key>
-    <string>key_Nq2RPcj7tWasHq2iJz7ysqQ</string>
+	<key>ConektaPublicKey</key>
+	<string>key_Nq2RPcj7tWasHq2iJz7ysqQ</string>
 </dict>
 </plist>
