--- a/Gooze/Release.plist
+++ b/Gooze/Release.plist
@@ -4,10 +4,10 @@
 <dict>
 	<key>AppTitle</key>
 	<string>Gooze</string>
-    <key>GoozeUrl</key>
-    <string>http://216.250.114.156/</string>
+	<key>GoozeUrl</key>
+	<string>https://gooze.app/</string>
 	<key>GoozeApiUrl</key>
-	<string>http://216.250.114.156/api</string>
+	<string>https://gooze.app/api</string>
 	<key>LogLevel</key>
 	<string>error</string>
 	<key>LogAppID</key>
@@ -16,9 +16,9 @@
 	<string>ypzfjdx2bffbxSqjoxebh3qmoiznmohu</string>
 	<key>LogAppKey</key>
 	<string>vskgnz6i2hmIdQ04Q0mjmelZz7bf7txR</string>
-    <key>SocketPath</key>
-    <string>/socket.io</string>
-    <key>ConektaPublicKey</key>
-    <string>key_Nq2RPcj7tWasHq2iJz7ysqQ</string>
+	<key>SocketPath</key>
+	<string>/socket.io</string>
+	<key>ConektaPublicKey</key>
+	<string>key_Nq2RPcj7tWasHq2iJz7ysqQ</string>
 </dict>
 </plist>
